--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^5.12.1",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-spinner": "^8.1.0",
     "popper.js": "^1.16.1",
