--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -11,17 +11,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^9.1.0",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "^9.1.0",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "angular-calendar": "^0.28.5",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "date-fns": "^2.10.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-spinner": "^8.1.0",
