--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^2.10.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ng-connection-service": "^1.0.4",
     "ngx-bootstrap": "^5.5.0",
     "ngx-spinner": "^8.1.0",
     "popper.js": "^1.16.1",
