--- a/MyApp/angular.json
+++ b/MyApp/angular.json
@@ -25,10 +25,17 @@
             ],
             "styles": [
               "src/styles.css",
-              
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
-                "node_modules/@fortawesome/fontawesome-free/css/all.css"
+              {
+                "input": "./node_modules/bootstrap/dist/css/bootstrap.min.css"
+              },
+              {
+                "input": "./node_modules/font-awesome/css/font-awesome.min.css"
+              },
+            
+       
+              {
+                "input": "./ node_modules/ngx-bootstrap/datepicker/bs-datepicker.css"
+              }
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
