--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -23,8 +23,11 @@
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "angular-calendar": "^0.28.5",
+    "angular-datatables": "^8.0.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "datatables.net": "^1.10.20",
+    "datatables.nnet-dt": "^1.10.20",
     "date-fns": "^2.10.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
@@ -41,8 +44,10 @@
     "@angular/cli": "~8.3.24",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
+    "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.33",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
