--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -16,22 +16,25 @@
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/fire": "^6.0.0-rc.1",
     "@angular/forms": "~8.2.14",
+    "@angular/http": "^7.2.16",
     "@angular/material": "^9.1.0",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "angular-calendar": "^0.28.5",
-    "angular-datatables": "^8.0.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
-    "datatables.net": "^1.10.20",
-    "datatables.nnet-dt": "^1.10.20",
     "date-fns": "^2.10.0",
+    "firebase": "^7.8.0",
+    "flx-ui-datatable": "^1.1.5",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ng-angular8-datatable": "^0.9.11",
     "ng-connection-service": "^1.0.4",
+    "ng-datepicker": "^1.0.2",
     "ngx-bootstrap": "^5.5.0",
     "ngx-spinner": "^8.1.0",
     "popper.js": "^1.16.1",
@@ -44,10 +47,8 @@
     "@angular/cli": "~8.3.24",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/jquery": "^3.3.33",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
@@ -60,6 +61,11 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.5.3",
+    "@angular-devkit/architect": "^0.900.0-0 || ^0.900.0",
+    "firebase-tools": "^7.12.1",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1"
   }
 }
