--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -35,6 +35,7 @@
     "ng-angular8-datatable": "^0.9.11",
     "ng-connection-service": "^1.0.4",
     "ng-datepicker": "^1.0.2",
+    "ng2-search-filter": "^0.5.1",
     "ngx-bootstrap": "^5.5.0",
     "ngx-spinner": "^8.1.0",
     "popper.js": "^1.16.1",
