--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.12.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "angular-calendar": "^0.28.5",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
