--- a/MyApp/angular.json
+++ b/MyApp/angular.json
@@ -25,7 +25,6 @@
             ],
             "styles": [
               "src/styles.css",
-              
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "node_modules/@fortawesome/fontawesome-free/css/all.css"
@@ -34,7 +33,6 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js"
-              
             ]
           },
           "configurations": {
@@ -129,6 +127,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "MyApp"
+    }
+  },
+  "defaultProject": "MyApp",
+  "cli": {
+    "analytics": false
+  }
 }
